// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar Basic display 1`] = `
<nav
  className="gmvCmZ"
>
  <div
    className="bKnjap"
  >
    <span
      className="kyOjWa"
    >
      <a
        className="fPOZMv hOOEYl"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="bKnjap"
  >
    <span
      className="cJOObM"
    >
      <a
        className="hOOEYl"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With admin user 1`] = `
<nav
  className="gmvCmZ"
>
  <div
    className="bKnjap"
  >
    <span
      className="kyOjWa"
    >
      <a
        className="fPOZMv hOOEYl"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="bKnjap"
  >
    <span
      className="cJOObM"
    >
      <span
        className="fewLnL"
        color="black"
        role="img"
        size={2}
      >
        <svg
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
      some user
       (admin)
    </span>
    <span
      className="cJOObM"
    >
      <span
        className="fewLnL"
        color="black"
        role="img"
        size={2}
      >
        <svg
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.36 6.64a9 9 0 1 1-12.73 0"
          />
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="12"
          />
        </svg>
      </span>
      <button
        className="czJsmP"
        onClick={[Function]}
        type="button"
      >
        Logout
      </button>
    </span>
  </div>
</nav>
`;

exports[`AppBar With custom brand and login links 1`] = `
<nav
  className="gmvCmZ"
>
  <div
    className="bKnjap"
  >
    <span
      className="kyOjWa"
    >
      <a
        className="fPOZMv hOOEYl"
        href="/home"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="bKnjap"
  >
    <span
      className="cJOObM"
    >
      <a
        className="hOOEYl"
        href="/signin"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With custom right component 1`] = `
<nav
  className="gmvCmZ"
>
  <div
    className="bKnjap"
  >
    <span
      className="kyOjWa"
    >
      <a
        className="fPOZMv hOOEYl"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div>
    userName
  </div>
</nav>
`;

exports[`AppBar With nav links 1`] = `
<nav
  className="gmvCmZ"
>
  <div
    className="bKnjap"
  >
    <span
      className="kyOjWa"
    >
      <a
        className="fPOZMv hOOEYl"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="bKnjap"
  >
    <span
      className="cJOObM"
    >
      <a
        className="hOOEYl"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;
